# databricks-bundle-starter

./: .gitignore  README.md  databricks.yml  pyproject.toml
resources/: dbks_bundle_starter_job.yml  dbks_bundle_starter_pipeline.yml
src/: dlt_pipeline.ipynb  notebook.ipynb
src/dbks_bundle_starter/: main.py
tests/: main_test.py
