[tool.poetry]
name = "dbks_bundle_starter"
version = "0.0.1"
description = "Databricks Bundle Starter"
authors = ["Lucas Nascimento <lucas.nascimento@qubika.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
databricks-dlt = "^0.2.1"
setuptools = "^75.1.0"
wheel = "^0.44.0"
databricks-connect = ">=15.4,<15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "dbks_bundle_starter.main:main"

